--- a/stats-preview-card-component-main/index.css
+++ b/stats-preview-card-component-main/index.css
@@ -1,3 +1,10 @@
+/* issues - 
+1-making image flush with the rest of card
+2-adding color to text inside the header
+3-general difficulty centering items (margin/padding)
+ */
+
+
 * {
   box-sizing: border-box;
 }
@@ -5,13 +12,61 @@
 /* font-family: 'Lexend Deca', sans-serif; */
 
 body {
-    background-color: hsl(233, 47%, 7%);
+  background-color: hwb(233 4% 90%);
 }
 
 .card-body {
   font-family: "Inter", sans-serif;
   color: white;
+  width: fit-content;
+  max-height: 446px;
+  background-color: hsl(244, 38%, 16%);
+margin: 10% 10%;}
+
+.flex-container {
+  height: 446px;
   display: flex;
+  align-items: center;
+  margin-right: 10%;
+}
+
+
+.blurb {
+  text-align:left;
+  width: 560px;
+  display: flex;
+  flex-direction: column;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+.box {
+  font-size: larger;
+  font-weight: 400;
+  font-family: 'Lexend Deca', sans-serif;
+}
+
+.boxes {
+  height: 100px;
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 20px;
+}
+
+.top {
+  font-weight: 700;
+line-height: .1rem;  
+}
+
+.bottom {
+  font-size: small;
+  padding-right: 20px;
+}
+.image {
+  order: 3;
+  width: 50%;
 }
 
 .stats {
