--- a/stats-preview-card-component-main/index.css
+++ b/stats-preview-card-component-main/index.css
@@ -1,9 +1,6 @@
 /* issues - 
-1-making image flush with the rest of card
-2-adding color to text inside the header
 3-general difficulty centering items (margin/padding)
  */
-
 
 * {
   box-sizing: border-box;
@@ -13,60 +10,77 @@
 
 body {
   background-color: hwb(233 4% 90%);
+  width: 100vw;
+  min-height: 100vh;
+  font-size: calc (10px + 2vmin) /*Ben's suggestion*/
+
+}
+
+.accent {
+  color: hsl(277, 64%, 61%);
 }
 
 .card-body {
   font-family: "Inter", sans-serif;
   color: white;
-  width: fit-content;
-  max-height: 446px;
   background-color: hsl(244, 38%, 16%);
-margin: 10% 10%;}
-
-.flex-container {
-  height: 446px;
+  margin: 10% 10%;
   display: flex;
-  align-items: center;
-  margin-right: 10%;
+  max-width: 60%;
+  width: 100%;
+  border-radius: 10px;
+}
+
+.card-body>div {
+  flex-basis: 50%;
 }
 
 
 .blurb {
-  text-align:left;
-  width: 560px;
+  /* font-size: calc (10px + 2vmin) ben's suggestion for scaling font size */
+  text-align: left;
   display: flex;
   flex-direction: column;
   padding-left: 5%;
   padding-right: 5%;
+  font-size: small;
+  max-width: 50%;
 }
 
 .box {
   font-size: larger;
   font-weight: 400;
-  font-family: 'Lexend Deca', sans-serif;
+  font-family: "Lexend Deca", sans-serif;
 }
 
 .boxes {
-  height: 100px;
+  min-height: 100px;
   width: 90%;
+  max-width: 90vw;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0px 20px;
+  flex-shrink: 3;
+}
+
+.container2 {
+  display: flex;
 }
 
 .top {
   font-weight: 700;
-line-height: .1rem;  
+  line-height: 0.1rem;
 }
 
 .bottom {
-  font-size: small;
-  padding-right: 20px;
+  font-size: smaller;
+  padding-right: 10px;
 }
 .image {
   order: 3;
-  width: 50%;
+max-width: 100%;
+border-bottom-right-radius: 10px;
+border-top-right-radius: 10px;
 }
 
 .stats {
